--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Designing Login form</title>
-	<link rel="stylesheet" type="text/css" href="loginForm.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 
 
 
